<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:text="@string/select_stream"
        android:textStyle="italic"
        android:background="#DADFFF"
        android:paddingTop="@dimen/_5sdp"
        android:textSize="@dimen/_35sdp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_20sdp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/artbutton"
        android:background="@drawable/button_style"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_70sdp"
        android:textColor="@android:color/holo_green_light"
        android:text="@string/arts"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/_20sdp" />

    <Button
        android:id="@+id/sciencebutton"
        android:background="@drawable/button_style"
        android:textColor="@android:color/holo_green_light"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_70sdp"
        android:textSize="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:text="@string/science" />

    <Button
        android:id="@+id/commercebutton"
        android:background="@drawable/button_style"
        android:textColor="@android:color/holo_green_light"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="@dimen/_70sdp"
        android:textSize="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        android:text="@string/commerce" />

</LinearLayout>