<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Splash_background"
    tools:context=".SplashScreenActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nagaon_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:text="@string/NGBS"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintBottom_toTopOf="@+id/principal_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/principal_logo"
        android:layout_width="140dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:scaleType="fitXY"
        android:src="@drawable/princiapl_logo"
        app:layout_constraintBottom_toTopOf="@+id/principal_name"
        app:layout_constraintEnd_toEndOf="@+id/nagaon_header"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/nagaon_header"
        app:layout_constraintTop_toBottomOf="@+id/nagaon_header" />

    <TextView
        android:id="@+id/principal_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center"
        android:text="@string/princi_msg"
        android:textSize="@dimen/_20sdp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/principal_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center"
        android:text="@string/principle_message"
        android:textAlignment="center"
        android:textSize="@dimen/_14sdp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nagaon_header"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/principal_name" />

</LinearLayout>